# AIKosh

./: .gitignore  Cargo.toml  LICENSE  README.md  test.http
chatbot/: README.md  app.py  requirements.txt
data/: articles.json  dashboard.json  datasets.json  models.json  tutorials.json  usecases.json  user.json
data/migrations/: 0001_initial_schema.sql  0002_fts_indexes.sql  0003_seed_lookups.sql
data/seed/: articles.json  datasets.json  toolkit.json  tutorials.json  usecases.json
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml
frontend/src/: App.tsx
frontend/src/components/: ArticleCard.tsx  DatasetCard.tsx  FloatingChat.tsx  Footer.tsx  Header.tsx  Layout.tsx  ModelCard.tsx  ToolkitCard.tsx  UseCaseCard.tsx
frontend/src/pages/: ArticlesPage.tsx  DashboardPage.tsx  DatasetDetailPage.tsx  DatasetsPage.tsx  ModelDetailPage.tsx  ModelsPage.tsx  ProfilePage.tsx  ToolkitDetailPage.tsx  ToolkitPage.tsx  TutorialsPage.tsx  UseCaseDetailPage.tsx  UseCasesPage.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
src/: config.rs  errors.rs  handlers.rs  main.rs  models.rs  state.rs
