[package]
name = "aikosh-backend"
version = "0.2.0"
edition = "2021"
default-run = "aikosh-backend"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
chrono = { version = "0.4.44", features = ["serde"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
async-stream = "0.3.6"
reqwest = { version = "0.11.27", features = ["json", "stream"] }
dotenvy = "0.15.7"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "chrono", "migrate"] }
argon2 = "0.5.3"
rand = "0.8.6"
anyhow = "1.0.102"
thiserror = "2.0.18"
